--- a/BBAuto.Repositories/BBAuto.Repositories.csproj
+++ b/BBAuto.Repositories/BBAuto.Repositories.csproj
@@ -61,8 +61,8 @@
     <Compile Include="Entities\DbCar.cs" />
     <Compile Include="Entities\DbCarDoc.cs" />
     <Compile Include="Entities\DbDiagCard.cs" />
+    <Compile Include="Entities\DbDictionary.cs" />
     <Compile Include="Entities\DbGrade.cs" />
-    <Compile Include="Entities\DbMark.cs" />
     <Compile Include="Entities\DbSaleCar.cs" />
     <Compile Include="Entities\DbDealer.cs" />
     <Compile Include="Entities\DbDriver.cs" />
@@ -73,9 +73,13 @@
     <Compile Include="Interfaces\IDbCarDoc.cs" />
     <Compile Include="Interfaces\IDbAccount.cs" />
     <Compile Include="Interfaces\IDbCar.cs" />
+    <Compile Include="Interfaces\IDbColor.cs" />
     <Compile Include="Interfaces\IDbDiagCard.cs" />
+    <Compile Include="Interfaces\IDbEmployeeName.cs" />
+    <Compile Include="Interfaces\IDbEngineType.cs" />
     <Compile Include="Interfaces\IDbGrade.cs" />
     <Compile Include="Interfaces\IDbMark.cs" />
+    <Compile Include="Interfaces\IDbRegion.cs" />
     <Compile Include="Interfaces\IDbSaleCar.cs" />
     <Compile Include="Interfaces\IDbDealer.cs" />
     <Compile Include="Interfaces\IDbDriver.cs" />
