Added dictionary service

--- a/BBAuto.Logic/BBAuto.Logic.csproj
+++ b/BBAuto.Logic/BBAuto.Logic.csproj
@@ -76,6 +76,33 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Services\Dictionary\FuelCardType\FuelCardTypeModel.cs" />
+    <Compile Include="Services\Dictionary\FuelCardType\FuelCardTypeService.cs" />
+    <Compile Include="Services\Dictionary\FuelCardType\IFuelCardTypeService.cs" />
+    <Compile Include="Services\Dictionary\ProxyType\ProxyTypeModel.cs" />
+    <Compile Include="Services\Dictionary\ProxyType\ProxyTypeService.cs" />
+    <Compile Include="Services\Dictionary\ProxyType\IProxyTypeService.cs" />
+    <Compile Include="Services\Dictionary\ViolationType\ViolationTypeModel.cs" />
+    <Compile Include="Services\Dictionary\ViolationType\ColorService.cs" />
+    <Compile Include="Services\Dictionary\ViolationType\IColorService.cs" />
+    <Compile Include="Services\Dictionary\CurrentStatusAfterDtp\CurrentStatusAfterDtpModel.cs" />
+    <Compile Include="Services\Dictionary\CurrentStatusAfterDtp\CurrentStatusAfterDtpService.cs" />
+    <Compile Include="Services\Dictionary\CurrentStatusAfterDtp\ICurrentStatusAfterDtpService.cs" />
+    <Compile Include="Services\Dictionary\RepairType\RepairTypeModel.cs" />
+    <Compile Include="Services\Dictionary\RepairType\RepairTypeService.cs" />
+    <Compile Include="Services\Dictionary\RepairType\IRepairTypeService.cs" />
+    <Compile Include="Services\Dictionary\Culprit\CulpritModel.cs" />
+    <Compile Include="Services\Dictionary\Culprit\CulpritService.cs" />
+    <Compile Include="Services\Dictionary\Culprit\ICulpritService.cs" />
+    <Compile Include="Services\Dictionary\ServiceStantion\ServiceStantionModel.cs" />
+    <Compile Include="Services\Dictionary\ServiceStantion\ServiceStantionService.cs" />
+    <Compile Include="Services\Dictionary\ServiceStantion\IServiceStantionService.cs" />
+    <Compile Include="Services\Dictionary\Comp\CompModel.cs" />
+    <Compile Include="Services\Dictionary\Comp\CompService.cs" />
+    <Compile Include="Services\Dictionary\Comp\ICompService.cs" />
+    <Compile Include="Services\Dictionary\Color\ColorModel.cs" />
+    <Compile Include="Services\Dictionary\Color\ColorService.cs" />
+    <Compile Include="Services\Dictionary\Color\IColorService.cs" />
     <Compile Include="Services\Dictionary\DictionaryModel.cs" />
     <Compile Include="Services\Dictionary\EmployeesName\EmployeesNameModel.cs" />
     <Compile Include="Services\Dictionary\EmployeesName\EmployeesNameService.cs" />
@@ -139,9 +166,15 @@
     <Compile Include="Services\DiagCard\DiagCardService.cs" />
     <Compile Include="Services\DiagCard\IDiagCardService.cs" />
     <Compile Include="Services\Dictionary\Mark\IMarkService.cs" />
+    <Compile Include="Services\Dictionary\Owner\OwnerModel.cs" />
+    <Compile Include="Services\Dictionary\Owner\OwnerService.cs" />
+    <Compile Include="Services\Dictionary\Owner\IOwnerService.cs" />
     <Compile Include="Services\Dictionary\Region\IRegionService.cs" />
     <Compile Include="Services\Dictionary\Region\RegionModel.cs" />
     <Compile Include="Services\Dictionary\Region\RegionService.cs" />
+    <Compile Include="Services\Dictionary\StatusAfterDtp\StatusAfterDtpModel.cs" />
+    <Compile Include="Services\Dictionary\StatusAfterDtp\StatusAfterDtpService.cs" />
+    <Compile Include="Services\Dictionary\StatusAfterDtp\IStatusAfterDtpService.cs" />
     <Compile Include="Services\Documents\ExcelDocument.cs" />
     <Compile Include="Services\Documents\IDocumentsService.cs" />
     <Compile Include="Services\Documents\Office\ExcelDoc.cs" />
