--- a/BBAuto.Logic/BBAuto.Logic.csproj
+++ b/BBAuto.Logic/BBAuto.Logic.csproj
@@ -76,6 +76,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Services\Dictionary\DictionaryMappingProfile.cs" />
     <Compile Include="Services\Dictionary\FuelCardType\FuelCardTypeModel.cs" />
     <Compile Include="Services\Dictionary\FuelCardType\FuelCardTypeService.cs" />
     <Compile Include="Services\Dictionary\FuelCardType\IFuelCardTypeService.cs" />
