--- a/BBAuto.Repositories/BBAuto.Repositories.csproj
+++ b/BBAuto.Repositories/BBAuto.Repositories.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Entities\DbCarDoc.cs" />
     <Compile Include="Entities\DbDiagCard.cs" />
     <Compile Include="Entities\DbDictionary.cs" />
+    <Compile Include="Entities\DbEngineType.cs" />
     <Compile Include="Entities\DbGrade.cs" />
     <Compile Include="Entities\DbSaleCar.cs" />
     <Compile Include="Entities\DbDealer.cs" />
