--- a/BBAuto.Repositories/BBAuto.Repositories.csproj
+++ b/BBAuto.Repositories/BBAuto.Repositories.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Entities\DbDriverCar.cs" />
     <Compile Include="Entities\DbEngineType.cs" />
     <Compile Include="Entities\DbGrade.cs" />
+    <Compile Include="Entities\DbLicense.cs" />
     <Compile Include="Entities\DbSaleCar.cs" />
     <Compile Include="Entities\DbDealer.cs" />
     <Compile Include="Entities\DbDriver.cs" />
@@ -78,6 +79,7 @@
     <Compile Include="Interfaces\IDbCar.cs" />
     <Compile Include="Interfaces\IDbDriverCar.cs" />
     <Compile Include="Interfaces\IDbFuelCardType.cs" />
+    <Compile Include="Interfaces\IDbLicense.cs" />
     <Compile Include="Interfaces\IDbProxyType.cs" />
     <Compile Include="Interfaces\IDbTempMove.cs" />
     <Compile Include="Interfaces\IDbViolationType.cs" />
