Added global .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,20 @@
-/.nuget/
-/packages/
-/TestResult/
-/TestResults/
-/WindowsFormsApplicationWorkingWithWebService/
-/BBAuto.v11.suo
-/.vs
+debug/
+release/
+bin/
+obj/
+packages/
+logs/
+.vs/
+*.user
+*.suo
+*.pdb
+*.*sdf
+*.*.config
+*.dbmdl
+*.log
+*.tlog
+*.obj
+*.cache
+*.jfm
+.idea/
+.editorconfig
