--- a/BBAuto.Repository/BBAuto.Repository.csproj
+++ b/BBAuto.Repository/BBAuto.Repository.csproj
@@ -43,9 +43,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IDataBase.cs" />
+    <Compile Include="Models\DbCustomer.cs" />
     <Compile Include="SQL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Transaction\Transaction.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Interfaces\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
