--- a/BBAuto/App.config
+++ b/BBAuto/App.config
@@ -1,13 +1,22 @@
-<?xml version="1.0"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <system.serviceModel>
         <bindings>
             <basicHttpBinding>
-                <binding name="BBAutoServiceSoap" maxBufferSize="64000000" maxReceivedMessageSize="64000000"/>
+                <binding name="BBAutoServiceSoap" maxBufferSize="64000000" maxReceivedMessageSize="64000000" />
             </basicHttpBinding>
         </bindings>
         <client>
-            <endpoint address="http://localhost:56202/BBAutoService.asmx" binding="basicHttpBinding" bindingConfiguration="BBAutoServiceSoap" contract="BBAutoWebService.BBAutoServiceSoap" name="BBAutoServiceSoap"/>
+            <endpoint address="http://localhost:56202/BBAutoService.asmx" binding="basicHttpBinding" bindingConfiguration="BBAutoServiceSoap" contract="BBAutoWebService.BBAutoServiceSoap" name="BBAutoServiceSoap" />
         </client>
     </system.serviceModel>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/></startup></configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" /></startup>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="System.ValueTuple" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.3.0" newVersion="4.0.3.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
+</configuration>
