--- a/ClassLibraryBBAuto/app.config
+++ b/ClassLibraryBBAuto/app.config
@@ -1,23 +1,32 @@
-<?xml version="1.0"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
     
-    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <system.serviceModel>
     <bindings>
       <basicHttpBinding>
-        <binding name="BBAutoServiceSoap" maxBufferSize="64000000" maxReceivedMessageSize="64000000"/>
+        <binding name="BBAutoServiceSoap" maxBufferSize="64000000" maxReceivedMessageSize="64000000" />
       </basicHttpBinding>
     </bindings>
     <client>
-      <endpoint address="http://localhost:56202/BBAutoService.asmx" binding="basicHttpBinding" bindingConfiguration="BBAutoServiceSoap" contract="BBAutoWebService.BBAutoServiceSoap" name="BBAutoServiceSoap"/>
+      <endpoint address="http://localhost:56202/BBAutoService.asmx" binding="basicHttpBinding" bindingConfiguration="BBAutoServiceSoap" contract="BBAutoWebService.BBAutoServiceSoap" name="BBAutoServiceSoap" />
     </client>
   </system.serviceModel>
   <entityFramework>
-    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework"/>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
-      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/></startup></configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" /></startup>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="System.ValueTuple" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.3.0" newVersion="4.0.3.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
+</configuration>
