--- a/BBAuto.Repository/BBAuto.Repository.csproj
+++ b/BBAuto.Repository/BBAuto.Repository.csproj
@@ -65,7 +65,7 @@
     <Compile Include="IRepository.cs" />
     <Compile Include="Models\DbCustomer.cs" />
     <Compile Include="Repository.cs" />
-    <Compile Include="SQL.cs" />
+    <Compile Include="SqlDatabase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Transaction\Transaction.cs" />
   </ItemGroup>
