Added service CarSale

--- a/BBAuto.Repository/BBAuto.Repository.csproj
+++ b/BBAuto.Repository/BBAuto.Repository.csproj
@@ -61,8 +61,10 @@
     <Compile Include="DbContext.cs" />
     <Compile Include="IDataBase.cs" />
     <Compile Include="IDbContext.cs" />
+    <Compile Include="Interfaces\IDbCarSale.cs" />
     <Compile Include="Interfaces\IDbCustomer.cs" />
     <Compile Include="IRepository.cs" />
+    <Compile Include="Models\DbCarSale.cs" />
     <Compile Include="Models\DbCustomer.cs" />
     <Compile Include="Repository.cs" />
     <Compile Include="SqlDatabase.cs" />
