--- a/BBAuto/BBAuto.csproj
+++ b/BBAuto/BBAuto.csproj
@@ -116,11 +116,11 @@
     <Compile Include="AddEdit\UserAccess_AddEdit.Designer.cs">
       <DependentUpon>UserAccess_AddEdit.cs</DependentUpon>
     </Compile>
-    <Compile Include="AddEdit\Car_Sale.cs">
+    <Compile Include="AddEdit\CarSaleForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="AddEdit\Car_Sale.Designer.cs">
-      <DependentUpon>Car_Sale.cs</DependentUpon>
+    <Compile Include="AddEdit\CarSaleForm.Designer.cs">
+      <DependentUpon>CarSaleForm.cs</DependentUpon>
     </Compile>
     <Compile Include="CommonForms\FormLoadFuel.cs">
       <SubType>Form</SubType>
@@ -504,8 +504,8 @@
     <EmbeddedResource Include="AddEdit\UserAccess_AddEdit.resx">
       <DependentUpon>UserAccess_AddEdit.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="AddEdit\Car_Sale.resx">
-      <DependentUpon>Car_Sale.cs</DependentUpon>
+    <EmbeddedResource Include="AddEdit\CarSaleForm.resx">
+      <DependentUpon>CarSaleForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="CommonForms\FormLoadFuel.resx">
       <DependentUpon>FormLoadFuel.cs</DependentUpon>
