--- a/BBAuto.Repository/BBAuto.Repository.csproj
+++ b/BBAuto.Repository/BBAuto.Repository.csproj
@@ -64,10 +64,13 @@
     <Compile Include="Interfaces\IDbCarSale.cs" />
     <Compile Include="Interfaces\IDbComp.cs" />
     <Compile Include="Interfaces\IDbCustomer.cs" />
+    <Compile Include="Interfaces\IDbTransponder.cs" />
     <Compile Include="IRepository.cs" />
     <Compile Include="Models\DbCarSale.cs" />
     <Compile Include="Models\DbComp.cs" />
     <Compile Include="Models\DbCustomer.cs" />
+    <Compile Include="Models\DbReportTransponder.cs" />
+    <Compile Include="Models\DbTransponder.cs" />
     <Compile Include="Repository.cs" />
     <Compile Include="SqlDatabase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
